--- a/src/formViews/SignaturePage.css
+++ b/src/formViews/SignaturePage.css
@@ -1,3 +1,6 @@
 .SignaturePad {
   border: 1px solid #000;
+  display:block;
+  width:100%;
+  height: 200px;
 }
